# guardian

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Makefile  SECURITY.md  pyproject.toml  zap.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dast.yml  lint-workflows.yml  oss-audit.yml  publish.yml  test.yml
src/legionforge_guardian/: app.py
src/legionforge_guardian/sdk/: client.py
tests/: test_checks.py  test_sdk.py
